[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-client"
version = "0.1.0"
description = "OpenAI-compatible client for a local vLLM deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vllm-client = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

# ── Ruff linter / formatter ────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]